--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ ul.bxslider {
 
 ul.bxslider>li {
     height: 100% !important;
+    width: 100% !important;
 }
 
 .slider_uvodka_box {
@@ -1198,3 +1199,41 @@ span.p_nadpisy {
     background-color: #353535;
     padding: 20px;
 }
+
+@media screen and (max-width: 991px) {
+    .slider_uvodka_box {
+      height: 100%;
+      background-position: center top 20px !important;
+      background-size: 200px;
+      padding-left: 0;
+      padding: 40px;
+      padding-top: 200px;
+  }
+    .slider_uvodka_box_nadpis {
+      float: none;
+      width: 100%;
+      max-height: 90px;
+      margin-top: 0px;
+      font-size: 28px;
+      margin-bottom: 20px;
+      overflow: hidden;
+      font-weight: 500;
+      text-decoration: underline;
+  }
+    .slider_uvodka_box_text{
+      display: none;
+    }
+    .slider_uvodka_box_text, .slider_uvodka_box_ceny_tl{
+      width: 100%;
+    }
+    .bx-wrapper .bx-viewport {
+      height: 420px !important;
+  }
+    .top_menu_kat_obr_obal {
+      width: auto;
+      height: 420px;
+  }
+    .vyhl_okno, .prihlas_okno{
+      top: 52px;
+    }
+  }
