--- a/style.css
+++ b/style.css
@@ -1435,3 +1435,11 @@ span.p_nadpisy {
     display: none !important;
 }
 }
+@media screen and (max-width: 767px){
+    form[name="zmena_poctu"] table tbody tr:first-child{
+        display: none;
+    }
+    
+    }
+    
+
