--- a/style.css
+++ b/style.css
@@ -853,6 +853,8 @@ span.p_nadpisy {
     .top_pruh2 {
         height: 52px;
         background-image: none;
+        z-index: 99999;
+    position: relative;
     }
 
     .top_pruh2_logo {
@@ -1005,6 +1007,22 @@ span.p_nadpisy {
 }
 
 
+@media screen and (max-width: 575px) {
+    .krok_na:last-child{
+        display: none;
+    }
+    .kos_celkem > div{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+}
+
+
+.kos_celkem_in {
+    width: auto;
+}
 
 .kat_filtr {
     height: auto;
@@ -1544,7 +1562,7 @@ select{
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 10;
+    z-index: 9999;
     backdrop-filter: blur(3px);
     backface-visibility: hidden;
     transition: 0.2s ease opacity;
