--- a/style.css
+++ b/style.css
@@ -492,7 +492,9 @@ span.p_nadpisy {
         justify-content: center;
         align-items: center;
     }
-
+    .nl .holder .nl_leva{
+        margin-bottom: 20px;
+    }
     .pata_odkazy {
         margin-top: 30px;
     }
@@ -1659,4 +1661,24 @@ select{
 .holder > .holder{
     padding-right: 0px !important;
     padding-left: 0px !important;
+}
+
+.holder > .holder3{
+    width: 70%;
+    background: white;
+    margin-top: 20px;
+    border: solid 1px #dedede;
+}
+.holder > .main_pravy{
+    width: 30%;
+    margin-top: 20px;
+}
+
+@media screen and (max-width: 991px){
+    .holder > .holder3{
+        width: 100%;
+    }
+    .holder > .main_pravy{
+        display: none;
+    }
 }
