--- a/style.css
+++ b/style.css
@@ -1866,6 +1866,8 @@ img[src="/img/req2.png"]{
     #TB_ajaxWindowTitle{
         font-size: 24px;
         line-height: 1.2;
+        padding-right: 30px;
+        padding-top: 15px;
     }
     }
 
