--- a/style.css
+++ b/style.css
@@ -1937,3 +1937,12 @@ img[src="/img/req2.png"]{
     padding-left: 10px;
   }
 
+  .under-filter select{
+    margin-left: 10px;
+  }
+  
+  @media screen and (max-width: 991px){
+  .under-filter div:nth-child(2) {
+      display: none;
+  }
+  }
