--- a/style.css
+++ b/style.css
@@ -1949,3 +1949,58 @@ img[src="/img/req2.png"]{
       display: none;
   }
   }
+
+
+  .kontakty{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    margin-top: 40px;
+  }
+  .page-content__cell{
+       padding-bottom: 80px;
+  }
+  .page-content__cell .contact-block {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      height: 52px;
+      border: 1px solid #e5e5e5;
+      padding: 0 30px;
+      font-size: 18px;
+      font-weight: 500;
+      color: #222427;
+      margin-bottom: 20px;
+      transition: 0.2s ease box-shadow;
+    text-decoration: none;
+  }
+  .page-content__cell h2 {
+      border-bottom: 1px solid #e5e5e5;
+      padding-bottom: 10px;
+      margin-bottom: 40px;
+    display: flex;
+  }
+  .page-content__cell p{
+    margin-bottom: 15px;
+  }
+  .page-content__cell>*:last-child {
+      padding-bottom: 0px;
+      margin-bottom: 0;
+  }
+  .page-content__cell ul {
+      list-style: none;
+      margin: 0;
+    margin-left: 20px;
+      padding: 0;
+      padding-bottom: 40px;
+  }
+  .page-content__cell li {
+      padding: 8px 0;
+  }  
+  
+  @media screen and (max-width: 991px){
+    .kontakty{
+        grid-template-columns: 1fr;
+        gap: 0px;
+      }
+    }
