--- a/style.css
+++ b/style.css
@@ -2014,6 +2014,7 @@ img[src="/img/req2.png"]{
     }
     .prihlas_okno a {
         padding: 10px 0;
+        border-top: 1px solid rgba(255,255,255,0.1);
     }
     .top_prihlas_okno_jmeno{
         padding-bottom: 10px;
